tiny correction to border size

--- a/css/login.css
+++ b/css/login.css
@@ -22,7 +22,7 @@ fieldset {
     -moz-box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     box-shadow: 10px 10px 5px 0 rgba(0,0,0,0.75);
     padding:1em;
-    border: 0;
+    border: none;
     background-color: white;
     /* There must be 1em between the content and the border of this element */
     /* It should have no border */
